# FirstApp-Qt5

./: CMakeLists.txt
libs/: CMakeLists.txt
src/: CMakeLists.txt  main.cc  main.cpp
src/include/: CMakeLists.txt  MainWindow.cc  MainWindow.hh
src/include/QWindow/: MainWindow.cpp  MainWindow.hpp
src/utilities/: logger.hh
